// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/SqlExecWorkflow/Detail/WorkflowBasicInfo render snap when workflow is normal 1`] = `
<body>
  <div>
    <div
      class="workflow-steps-basic-info"
    >
      <div
        class="workflow-steps-basic-info-title"
      >
        基本信息
      </div>
      <div
        class="workflow-steps-basic-info-item"
      >
        <div
          class="workflow-steps-basic-info-item-label"
        >
          创建人
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center workflow-steps-basic-info-item-value"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc"
              style="width: 20px; height: 20px; line-height: 20px; font-size: 18px;"
            >
              <span
                class="ant-avatar-string"
                style="line-height: 20px; transform: scale(1) translateX(-50%);"
              >
                A
              </span>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              admin
            </span>
          </div>
        </div>
      </div>
      <div
        class="workflow-steps-basic-info-item"
      >
        <div
          class="workflow-steps-basic-info-item-label"
        >
          创建时间
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center workflow-steps-basic-info-item-value"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="css-u3jcp4"
            >
              <svg
                height="18"
                viewBox="0 0 18 18"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 16.5a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15M9 15A6 6 0 1 0 9 3a6 6 0 0 0 0 12m.75-6h3v1.5h-4.5V5.25h1.5z"
                  fill="#8A8F99"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              2024-01-05T11:00:33Z
            </span>
          </div>
        </div>
      </div>
      <div
        class="workflow-steps-basic-info-item"
      >
        <div
          class="workflow-steps-basic-info-item-label"
        >
          工单状态
        </div>
        <div
          class="workflow-steps-basic-info-item-value"
        >
          <div
            class="css-3q8fl"
          >
            <svg
              fill="none"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.875 1.516a2.25 2.25 0 0 1 2.25 0l3.928 2.267a2.25 2.25 0 0 1 1.125 1.95v4.535a2.25 2.25 0 0 1-1.125 1.948l-3.928 2.269a2.25 2.25 0 0 1-2.25 0l-3.928-2.268a2.25 2.25 0 0 1-1.125-1.95V5.733a2.25 2.25 0 0 1 1.125-1.949z"
                stroke="#6094FC"
                stroke-width="1.5"
              />
              <path
                clip-rule="evenodd"
                d="M8 3.155V8l-4.207 2.404a1 1 0 0 0 .377.385L7.5 12.71a1 1 0 0 0 1 0l3.33-1.922a1 1 0 0 0 .5-.866V6.077a1 1 0 0 0-.5-.866L8.5 3.29a1 1 0 0 0-.5-.134"
                fill="#6094FC"
                fill-rule="evenodd"
              />
            </svg>
            <span>
              正在上线
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlExecWorkflow/Detail/WorkflowBasicInfo render snap when workflow is undefined 1`] = `
<body>
  <div>
    <div
      class="workflow-steps-basic-info"
    >
      <div
        class="workflow-steps-basic-info-title"
      >
        基本信息
      </div>
      <div
        class="workflow-steps-basic-info-item"
      >
        <div
          class="workflow-steps-basic-info-item-label"
        >
          创建人
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center workflow-steps-basic-info-item-value"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc"
              style="width: 20px; height: 20px; line-height: 20px; font-size: 18px;"
            >
              <span
                class="ant-avatar-string"
                style="line-height: 20px; transform: scale(1) translateX(-50%);"
              >
                A
              </span>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              admin
            </span>
          </div>
        </div>
      </div>
      <div
        class="workflow-steps-basic-info-item"
      >
        <div
          class="workflow-steps-basic-info-item-label"
        >
          创建时间
        </div>
        <div
          class="ant-space ant-space-horizontal ant-space-align-center workflow-steps-basic-info-item-value"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <span
              class="css-u3jcp4"
            >
              <svg
                height="18"
                viewBox="0 0 18 18"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9 16.5a7.5 7.5 0 1 1 0-15 7.5 7.5 0 0 1 0 15M9 15A6 6 0 1 0 9 3a6 6 0 0 0 0 12m.75-6h3v1.5h-4.5V5.25h1.5z"
                  fill="#8A8F99"
                />
              </svg>
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <span>
              2024-01-05T11:00:33Z
            </span>
          </div>
        </div>
      </div>
      <div
        class="workflow-steps-basic-info-item"
      >
        <div
          class="workflow-steps-basic-info-item-label"
        >
          工单状态
        </div>
        <div
          class="workflow-steps-basic-info-item-value"
        >
          -
        </div>
      </div>
    </div>
  </div>
</body>
`;
